# pi0grasp

./: .gitignore  .gitmodules  README.md  ros2_control_reference.md  worklog.md
.devcontainer/: Dockerfile  devcontainer.json
ros2_ws/: .env  run_pi0grasp.sh
ros2_ws/src/pi0_ur5_grasp/: package.xml  setup.cfg  setup.py
ros2_ws/src/pi0_ur5_grasp/launch/: pi0_grasp.launch.py
ros2_ws/src/pi0_ur5_grasp/pi0_ur5_grasp/: finalgrasp.py  home_pose.py  pi0grasp.py  pi0grasp_old.py  simplegrasp.py  smolvlagrasp.py
ros2_ws/src/spacemouse_joint_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/spacemouse_joint_control/launch/: joint_control.launch.py
ros2_ws/src/spacemouse_joint_control/spacemouse_joint_control/: joint_controller_node.py
ros2_ws/src/ur5_spacemouse_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/ur5_spacemouse_control/ur5_spacemouse_control/: spacemouse_servo_bridge.py
ros2_ws/src/ws_moveit/ur5_moveit_config/: .setup_assistant  package.xml  ur_mover.py
ros2_ws/src/ws_moveit/ur5_moveit_config/config/: kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur5.ros2_control.xacro  ur5.srdf  ur5.urdf.xacro  ur_moveit_config.yaml  ur_twist_config.yaml
ros2_ws/src/ws_moveit/ur5_moveit_config/launch/: ur_description.launch.py  ur_twist.launch.py
