<?xml version="1.0"?>
<package format="3">
  <name>ur5_spacemouse_control</name>
  <version>0.0.1</version>
  <description>Bridge from SpaceMouse to MoveIt Servo using libspnav</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
